# wimp

./: README.md  pyproject.toml  setup.py
tests/: __init__.py  test_cli.py  test_collector.py  test_handler.py  test_imports.py  test_notebook.py  test_stdlib.py  test_utility.py
wimp/: __main__.py  collector.py  handler.py  utility.py
